Ajout de l'annuaire OK

--- a/src/main/resources/templates/fragments/layout/side-bar-frag.html
+++ b/src/main/resources/templates/fragments/layout/side-bar-frag.html
@@ -121,6 +121,13 @@
 	                  <span>Archivage</span>
 	                 </a>
 	              </li>
+	              
+	              <li class="sub-menu">
+	                <a href="/staffadmin/annuaire">
+	                  <i class="fa fa-users"></i>
+	                  <span>Annuaire</span>
+	                </a>
+	              </li> 	              
 	          </th:block>
                 
 
