Upload photo OK, Début de la gestion des archives

--- a/src/main/resources/templates/agent/list/list-agent-frag.html
+++ b/src/main/resources/templates/agent/list/list-agent-frag.html
@@ -7,8 +7,8 @@
 			<div class="panel panel-default">
 				<div class="panel-heading">
 					Liste du personnel
-					<span class="pull-right" th:each="ua:${uniteAdminHierarchie}">
-						<span th:text="${ua}"></span>
+					<span class="pull-right">
+						<span th:text="${visibilite}"></span>
 					</span>
 				</div>
 				<div class="panel-body">
