--- a/src/main/resources/templates/fragments/layout/side-bar-frag.html
+++ b/src/main/resources/templates/fragments/layout/side-bar-frag.html
@@ -91,32 +91,21 @@
 	                </a>
 	              </li> 	              	                     
 	              
-<!-- 	              <li class="sub-menu">
-	                <a th:href="@{/mucab/projets/bassam/index}">
-	                  <i class="fa fa-users"></i>
-	                  <span>Promotions/Nominations</span>
-	                </a>
-	   				<ul class="sub">
-	   					<li><a>Promotions</a></li>
-	   					<li><a>Nominations</a></li>
-	   				</ul>
-	              </li>    -->           
-	                
-
 	              <li class="sub-menu">
 	              	<a href="#">
 	                	<i class="fa fa-users"></i>
-	                  	<span>Administration>
+	                  	<span>Administration</span>
 	                </a>
 	   				<ul class="sub">
-	   					<li><a href="#">Liste des utilisateurs</a></li>
-	   					<li><a href="/staffadmin/gestion-roles/form">Gestion des roles </a></li>
+	   					<li><a href="/staffadmin/administration/list-users">Liste des utilisateurs</a></li>
+	   					<li><a href="/staffadmin/administration/gestion-roles/form">Gestion des roles </a></li>
+	   					<li><a href="/staffadmin/administration/creation/forms">Création </a></li>
 	   				</ul>
 	              </li>	 
 	                
 	                
 	              <li class="sub-menu">
-	                <a href="javascript:;">
+	                <a href="/staffadmin/archivage/agents">
 	                  <i class="fa fa-book"></i>
 	                  <span>Archivage</span>
 	                 </a>
