--- a/src/main/resources/templates/administration/gestion-roles/frm-gestion-roles.html
+++ b/src/main/resources/templates/administration/gestion-roles/frm-gestion-roles.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.12.6/css/selectize.bootstrap3.min.css" integrity="sha256-ze/OEYGcFbPRmvCnrSeKbRTtjG4vGLHXgOqsyLFTRjg=" crossorigin="anonymous" />
 	<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 	<link href="/lib/dualListBox/bootstrap-duallistbox.css" rel="stylesheet">
+	<link href="/staffadmin/css/toggle-switch.css" rel="stylesheet">
 
     <style type="text/css">
         div.panel div.panel-heading 
@@ -59,23 +60,14 @@
         <script src="/lib/jquery/JQueryBolckUI.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
         <script src="/lib/dualListBox/jquery.bootstrap-duallistbox.js"></script>
-        <script src="/staffadmin/js/agent/frm-agent.js"></script>
+        
        	
-       	<script type="text/javascript">
-
-            function formatDropDownBoxToSelect2(idDropDown)
-            {
-                $(document).ready(function() 
-                {
-                    $('#'+idDropDown).select2();
-                });
-            }
-
-		
+       	<script src="/staffadmin/js/plugins-functions/plugins-functions.js" type="text/javascript">
 
        	</script>
        	
         <script>
+        	formatDropDownBoxToSelect2("visibilite");
             var demo1 = $('#roles-selection').bootstrapDualListbox
             (
             	{
@@ -88,6 +80,26 @@
             {
                 $("#setRolesForm").submit();
             });
+
+			function switchingCheckBox()
+			{
+            	if($("#active").is(':checked'))
+	            {
+	                $("#active-label").text("Désactiver")
+	            }
+	            else
+	            {
+	            	$("#active-label").text("Activer")
+	            } 
+			}
+            
+            $("#active").click(function(e)
+            {
+            	switchingCheckBox();
+            });
+
+            switchingCheckBox();
+	            
             /*$("#demoform").submit(function() {
               alert($('[name="duallistbox_demo1[]"]').val());
               return false;
