--- a/src/main/resources/templates/archivage/agent/agent-profile-card-frag.html
+++ b/src/main/resources/templates/archivage/agent/agent-profile-card-frag.html
@@ -6,46 +6,104 @@
 <body>
 	<th:block th:fragment="agent-profile-card-frag">
 		<!-- WEATHER-2 PANEL -->
-		<div class="col-lg-12 col-md-12 col-sm-12 mb">
-			<div class="weather-2 pn">
-				<div class="weather-2-header">
-					<div class="row">
-						<div class="col-sm-6 col-xs-6">
-							<p th:text="${agent.nom +' '+ agent.prenom}"></p>
-						</div>
-						<div class="col-sm-6 col-xs-6 goright">
-							<p class="small" th:text="${agent.fonction.nomFonction}"></p>
-						</div>
-					</div>
+		<div  >
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					Archivage
+					<span class="pull-right">
+						<span class="pull-right" th:if="${agent!=null}">
+							<img th:title="${agent}" alt="photo de l'agent" th:src="@{'/staffadmin/agents/'+ ${agent.idAgent}+'/photo'}" class="img-circle pull-right" style="height: 35px; width: 35px";>
+						</span>	
+					</span>
 				</div>
-				<!-- /weather-2 header -->
-				<div class="row centered">
-					<img th:src="@{'/staffadmin/agents/'+${agent.idAgent}+'/photo'}"
-						class="img-circle" width="70" height="70">
-				</div>
-				<div class="row data">
-					<div class="col-sm-6 col-xs-6 goleft">
-						<h6>
-							<b th:text="${'Fixe bureau : ' + agent.fixeBureau}"></b>
-						</h6>
-						<h6>
-							<b th:text="${'Cel : ' + agent.tel}"></b>
-						</h6>
-						<h6>
-							<b th:text="${agent.email}"></b>
-						</h6>
-					</div>
-					<div class="col-sm-6 col-xs-6 goright">
-						<h6>
-							<b th:text="${agent.emploi.nomEmploi}"></b>
-						</h6>
-						<h6>
-							<b th:text="${'Matricule : ' + agent.matricule}"></b>
-						</h6>
-						<h6>
-							<b th:text="${'Grade : ' + agent.grade.nomGrade}"></b>
-						</h6>
-					</div>
+				<div th:if="${agent!=null}" class="panel-body" >
+						<table style="margin-top: 10px;" th:if="${agent!=null}" class="table table-striped">
+
+								 	<tr style="height: 40px;">
+									    <th style="vertical-align: middle;">Nom</th>
+									    <td style="vertical-align: middle;" th:text="${agent.nom}"></td>
+									    
+									    <td style="width: 15%;"></td>
+									    
+									    <th style="vertical-align: middle;">Prénom</th>
+									    <td style="vertical-align: middle;" th:text="${agent.prenom}"></td>
+								  	</tr>
+								  	
+								  	<tr style="height: 40px;">
+									    <th style="vertical-align: middle;">Matricule</th>
+									    <td style="vertical-align: middle;" th:text="${agent.matricule}"></td>
+								  	
+								  		<td></td>
+								  	
+								  		<th style="vertical-align: middle;">Post</th>
+									    <td style="vertical-align: middle;" th:text="${agent.fixeBureau}"></td>
+								  	</tr>					  	
+								  	
+								  	
+								  	<tr style="height: 40px;">
+									    <th style="vertical-align: middle;">Fonction</th>
+									    <td style="vertical-align: middle;" th:text="${agent.fonction.nomFonction}"></td>
+									    
+									    <td></td>
+									    
+									    <th style="vertical-align: middle;">Emploi</th>
+									    <td style="vertical-align: middle;" th:text="${agent.emploi.nomEmploi}"></td>
+								  	</tr>								  	
+								  								  	
+								  	
+								  	<tr style="height: 40px;">
+									    <th style="vertical-align: middle;">Grade</th>
+									    <td style="vertical-align: middle;" th:text="${agent.grade.nomGrade}"></td>
+								  	
+								  		<td></td>
+								  	
+								  		<th style="vertical-align: middle;">Service</th>
+									    <td style="ertical-align: middle;" th:text="${agent.tutelleDirecte}"></td>
+								  	</tr>	
+								  	
+								  	<tr style="height: 40px;">
+									    <th style="vertical-align: middle;">Email Professionnel</th>
+									    <td style="vertical-align: middle;" th:text="${agent.emailPro}"></td>
+								  	
+								  		<td></td>
+								  	
+								  		<th style="vertical-align: middle;">Email</th>
+									    <td style="vertical-align: middle;" th:text="${agent.email}"></td>
+								  	</tr>								  								  	
+								  				  						  	
+						</table>	
+						
+						
+						<div class="jumbotron">
+							<div class="container">
+								<div class="col-md-6">
+									<div class="form-group">
+										<label for="typeFile">Choisir le type de fichier</label>
+										<select class="form-control" name="typeFile" id="typeFile" th:value="${typeFile}">
+											<option value=""></option>
+											<option value="noteServiceDAAF">Note de service de la DAAF</option>
+										    <option value="noteServiceDGBF">Note de service de la DGBF</option>
+										    <option value="certificatService1">Certificat de première prise de service</option>
+										    <option value="arreteNomination">Arrêté de nomination</option>
+										    <option value="decisionAttente">Décision d'attente</option>
+										    <option value="cv">CV</option>
+										  	<option value="photo">Photo</option>
+										</select>							
+									</div>
+								</div>
+								
+								<div class="col-md-6">
+									<div class="form-group">
+										<input style="margin: 20px 0px;" type="file" class="form-control" id="file" name="file" required="required"/>
+									</div>
+								</div>		
+
+								<div class="col-md-6">
+									<button id="btnUpload" disabled="disabled" class="btn btn-primary btn-lg">Upload</button>
+								</div>
+							</div>
+						</div>
+					
 				</div>
 			</div>
 		</div>
