--- a/src/main/resources/templates/archivage/agent/archivage-agent.html
+++ b/src/main/resources/templates/archivage/agent/archivage-agent.html
@@ -56,33 +56,35 @@
 
     <body>
         <div layout:fragment="content">
-            <div class="container-fluid">
                 
                     <div class="alert alert-danger col-lg-12 mb-3" th:if="${errorMsg}">
                         <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
                         <strong>Erreur de saisie : </strong> 
-                        <div th:text="${errorMsg}"></div>
+                        <span th:text="${errorMsg}"></span>
                     </div>
+                    
+                    <div class="panel panel-default">
+                    	<div class="panel-heading">
+                    		<form  class="form-inline" action="/staffadmin/archivage/agents">
+	                    		<div class="form-group">
+	                    			<label for="matricule" class="control-label">Matricule</label>
+	                    			<input placeholder="matricule" class="form-control" name="matricule" id="matricule"/>
+	                    			<button type="submit" class="btn btn-primary">
+	                    				<i class="glyphicon glyphicon-search"></i>
+	                    			</button>
+	                    		</div>
+                    		</form>
+                    	</div>
+                    </div>                    
 
                     <th:block th:fragment="pieces-jointes-frag">
-                        <div class="panel panel-default">
-                            <div class="panel-heading"><a href="#pieces-jointes" data-toggle="collapse">Pieces jointes</a></div>
-                            <div class="panel-body panel-collapse collapse in" id="pieces-jointes">
-                                <div class="col-md-7">
-                                    <th:block th:replace="archivage/agent/agent-profile-card-frag.html::agent-profile-card-frag"></th:block>
-                                </div>
-                                <div class="col-md-5">
-                                    <th:block th:replace="archivage/agent/pieces-jointes-frag.html::pieces-jointes-frag"></th:block>
-                                </div>
-                            </div>
-                        </div>
+						<form enctype="multipart/form-data" method="post" id="archivage-form" th:action=" ${agent}!=null ? '/staffadmin/archivage/agents/'+${agent.idAgent} : '#'">                               
+                   			<th:block th:replace="archivage/agent/agent-profile-card-frag.html::agent-profile-card-frag"></th:block>
+                 		</form>
                     </th:block>
-                                <!-- <button class="btn btn-success mr-3" id="btn-modal-trigger" type="button" data-toggle="modal" href="#confirmation-modal">Valider</button> -->
-                    <button class="btn btn-success mr-3" id="btn-valider" type="button">Valider btn</button>
-                    <button class="btn btn-warning mr-3" id="btn-reset" type="reset">Reset</button>
-                    <button type="submit" id="btn-submit" class="btn btn-success btn-lg">Save</button>
+   
 
-            </div>
+
         </div>
         <div layout:fragment="js-specifics-dependancies">
             <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
