--- a/src/main/resources/templates/agent/list/list-agent-frag.html
+++ b/src/main/resources/templates/agent/list/list-agent-frag.html
@@ -38,7 +38,8 @@
 								<td th:text="${agent.grade.nomGrade}"></td>
 								
 								<td style="text-align: center; vertical-align: middle;">
-									<p class="centered"><a href="profile.html"><img th:src="@{'/staffadmin/agents/'+${agent.idAgent}+'/photo'}" class="img-circle" width="40" height="40"></a></p>
+								
+									<p class="centered"><a href="profile.html"><img th:src="'/staffadmin/photo-agent/'+${agent.idAgent}" class="img-circle" width="40" height="40"></a></p>
 								</td>
 								<td style="text-align: center; vertical-align: middle;">
 									<div class="btn-group">
