--- a/src/main/resources/templates/user/summary-card-frag.html
+++ b/src/main/resources/templates/user/summary-card-frag.html
@@ -36,7 +36,7 @@
 				<!-- /col-md-4 -->
 	 			<div class="col-md-3 centered">
 					<div class="profile-pic">
-						<p><img id="photo-tag" th:src="@{'/staffadmin/agents/'+${visitedUser.agent.idAgent}+'/photo'}" class="img-circle"/></p>
+						<p><img id="photo-tag" th:src="@{'/staffadmin/photo-agent/'+${visitedUser.agent.idAgent}}" class="img-circle"/></p>
 						<div th:if="${authUser.idUser == visitedUser.idUser}">
 							<form th:action="'/staffadmin/uploadPhoto/'+${visitedUser.agent.idAgent}" method="post" enctype="multipart/form-data">
 															
