--- a/src/main/resources/templates/administration/gestion-roles/frm-gestion-roles.html
+++ b/src/main/resources/templates/administration/gestion-roles/frm-gestion-roles.html
@@ -7,6 +7,8 @@
 	<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 	<link href="/lib/dualListBox/bootstrap-duallistbox.css" rel="stylesheet">
 	<link href="/staffadmin/css/toggle-switch.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdn.datatables.net/1.10.23/css/jquery.dataTables.min.css">
+	
 
     <style type="text/css">
         div.panel div.panel-heading 
@@ -60,11 +62,29 @@
         <script src="/lib/jquery/JQueryBolckUI.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
         <script src="/lib/dualListBox/jquery.bootstrap-duallistbox.js"></script>
+        <script type="text/javascript" src="https://cdn.datatables.net/1.10.23/js/jquery.dataTables.min.js"></script>
         
        	
        	<script src="/staffadmin/js/plugins-functions/plugins-functions.js" type="text/javascript">
 
        	</script>
+       	
+       	        	
+	    <script type="text/javascript">
+		        $(document).ready(function() 
+		    	{
+		            $('#tbl-privileges').DataTable
+		            (
+				        {
+				        	"scrollY":"200px",
+				        	"scrollCollapse":true,
+				        	"paging":false
+					    }
+					
+						
+				    );
+		        });
+	    </script>
        	
         <script>
         	formatDropDownBoxToSelect2("visibilite");
@@ -75,6 +95,66 @@
             		moveOnSelect: false
             	}
             );
+
+            $("#roles-selection").change(function(e)
+            {
+                var listRoles = $("#roles-selection > option:selected");
+                var idUser = $("#idUser").val();
+                
+            	console.log("idUser === " + idUser);
+            	var list="";
+            	listRoles.each(function(index)
+                {
+                    console.log($( this ).val());
+					list += $( this ).val()+",";
+                });
+                	$.ajax
+				    ({
+				        type: "get",
+				        url: "http://localhost:8081/staffadmin/administration/getPrivilegeAccessDtoFromRolesIdsAndUserId?idUser="+idUser+"&idRoles="+list,
+				        success: function (response) 
+				        {
+					        
+				            //alert("HELLO AJAX");
+				            $("#tbl-privileges-body").children('tr').remove();
+				            
+				            $.each(response, function(key, value) 
+				            {
+					            var checked = "";
+					            if(value.notRevoked)
+						        {
+						            checked = "checked";
+						        }
+					            else
+						        {
+					            	checked = "";
+						        }
+					            //alert(value.privilegeName);
+					            $('#tbl-privileges-body').append
+					            	((
+							            	"<tr>"
+							            		+"<td>" + value.privilegeName+  "<td/>"
+							            		+"<td>"
+							            			+"<input type='checkbox' name='notRevokedPrivilegeIds' value="+value.idPrivilege+ " "+checked+ " />" 
+							            			+"<input value=" + value.idPrivilege + " type='hidden' name='privilegeIds' />"
+							            		+"<td/>"+
+									        "</tr>"
+							         ));
+				            	//alert(value["sigle"]);
+				                /*$('#idTutelleDirecte')
+				                    .append($("<tr></tr>")
+				                    .attr("value",value["idUniteAdmin"])
+				                    .text(value["appellation"] + ' ('+ value["sigle"]+ ')'  ));
+								*/
+					         });
+				        }
+				    });
+            });
+
+            function myFunction(item, index) {
+            	  alert(item);
+            	}
+           
 
             $("#btnSetRolesForm").click(function(e)
             {
